[gd_scene load_steps=4 format=3 uid="uid://b7bdn6xi1opdx"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_beaml"]

[sub_resource type="LabelSettings" id="LabelSettings_1385g"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_l7m27"]
font_size = 36

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_beaml")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 21.0
offset_right = 256.0
offset_bottom = 84.0

[node name="TimeLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -17.0
offset_right = 82.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "Time: 00:00.000"
label_settings = SubResource("LabelSettings_1385g")

[node name="CheckpointLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -160.0
offset_right = 115.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "Checkpoint!"
label_settings = SubResource("LabelSettings_l7m27")
horizontal_alignment = 1
vertical_alignment = 1
